Finished up last touching bits

--- a/index.html
+++ b/index.html
@@ -72,5 +72,33 @@
         </div>
       </div>
     </main>
+    <section class="quote-section">
+      <div class="section-container">
+        <q class="quote"
+          >This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows ? All i know is that it looks nice.</q
+        >
+        <p class="quote-author">-Thor, God of Thunder</p>
+      </div>
+    </section>
+    <section class="cta-section">
+      <div class="cta-container">
+        <div class="cta-text">
+          <h2>Call to action! It's time!</h2>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="cta-button">
+          <input type="button" value="Sign up" />
+        </div>
+      </div>
+    </section>
+    <footer class="botton-footer">
+      <div class="footer-container">
+        <p>Copyright &copy; Ben Freemantle & The Odin Project 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
